--- a/Home.html
+++ b/Home.html
@@ -94,6 +94,7 @@
     
       if (isMobileDevice()) {
         console.log('Mobile device');
+        window.location.replace("https://pyblog.ddns.net/Home-Mobile")
       } else {
         console.log('Desktop device');
       }
