--- a/Home.html
+++ b/Home.html
@@ -194,7 +194,7 @@
 
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
-    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer;">Back to Top</a>
+    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
     <script src="Scroll.js">
     </script>
   <!--Proceedual loading-->
