update to Mobile Homepage

--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage | pyblog</title>
+    <title>Home | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="style-mobile.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="icon.png">
     <style>
@@ -78,7 +78,7 @@
 		<div class="menu-item"><a href="">About Pyblog</a></div>
 		<div class="menu-item"><a href="">Fun Blogs</a></div>
 		<div class="menu-item"><a href="">Helpful Blogs</a></div>
-    <div class="menu-item"><a href="Authors/index">Authors</a></div>
+    <div class="menu-item"><a href="">Authors</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
@@ -109,7 +109,7 @@
 
 </body>
 <footer style="margin-top: 50px; margin-bottom: 20px">
-    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer;">Back to Top</a>
+  <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
     <script src="Scroll.js">
     </script>
   <!--Proceedual loading-->
