Fixed lots of stuff that broke during the merge

--- a/Blogs/Introduction-Into-Ursina.html
+++ b/Blogs/Introduction-Into-Ursina.html
@@ -10,7 +10,7 @@
       <div class="menu">
         <a href="../Home"><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></a>
         <a href="../Home" class="hover-underline-animation">Home</a>
-    </div>
+      </div>
     </header>
     <br><br>
     <img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">
@@ -100,7 +100,7 @@ app.run()
 </script>
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
-    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
+    <a id="backtotopbtn" class="top">Back to Top</a>
     <script src="../Scroll.js">
     </script>
   </footer>
