--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -168,7 +168,7 @@ app = Flask(__name__, static_folder="static", template_folder="HTML")
   </script>
 </body>
 <footer style="margin-top: 50px; margin-bottom: 20px">
-  <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer">Back to Top</a>
+  <a id="backtotopbtn" class="top">Back to Top</a>
   <script src="../Scroll.js">
   </script>
 </footer>
