--- a/404.html
+++ b/404.html
@@ -65,6 +65,7 @@
     <script>
       const lowercasePaths = [
         '/home',
+        '/home-mobile',
         '/blogs',
         '/blogs/creating-a-website-with-flask',
         '/authors/itsbailey',
@@ -80,6 +81,7 @@
     
       const uppercasePaths = [
         '/Home',
+        '/Home-Mobile',
         '/Blogs',
         '/Blogs/Creating-A-Website-With-Flask',
         '/Authors/',
