--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -108,19 +108,8 @@
     }
   
   </script>
-    <br><br><br><br>
-    <h1>This is the homepage for the mobile version of pyblog</h1>
-  
-  
-  
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-  <br><br>
+
+  <!-- MAIN STUFF-->
   <img src="icon.png" class="img-preset"/>
 
   <!-- About PyBlog -->
