made Home-Mobile accessable on pc for tests

--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -104,7 +104,7 @@
   
     if (isMobileDevice()) {
     } else {
-      window.location.replace("https://pyblog.ddns.net/Home")
+      window.location.replace("https://pyblog.ddns.net/Home-Mobile") //Change to "https://pyblog.ddns.net/Home" after pushing full release
     }
   
   </script>
