--- a/Home.html
+++ b/Home.html
@@ -155,10 +155,10 @@
       </div>
     </div><br>
     <div class="grid-container" id="gridContainer2" style="display: none;">
-      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-1'" style="cursor: pointer;">
-        <img src="sad.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Machine-Learning.png" class="blog-img">
         <p><b>
-          Blog doesn't exist yet
+          Machine Learning With Python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
