--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -165,10 +165,10 @@
     </div>
   </div><br>
   <div class="grid-container" id="gridContainer2" style="display: none;">
-    <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-1'">
-      <img src="sad.png">
+    <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Machine-Learning.png" class="blog-img">
       <p><b>
-        Blog doesn't exist yet
+        Machine Learning With Python
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'">
