--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -103,8 +103,9 @@
     }
   
     if (isMobileDevice()) {
+      ;
     } else {
-      //window.location.replace("https://pyblog.ddns.net/Home") Fix after full release
+      window.location.replace("https://pyblog.ddns.net/Home")
     }
   
   </script>
