and some other stuff

--- a/404.html
+++ b/404.html
@@ -76,7 +76,8 @@
         '/blogs/installing-python',
         '/blogs/introduction-into-ursina',
         '/blogs/making-a-chatbot-with-python',
-        '/blogs/python-introduction'
+        '/blogs/python-introduction',
+        '/blogs/machine-learning-with-python'
       ];
     
       const uppercasePaths = [
@@ -92,7 +93,8 @@
         '/Blogs/Installing-Python',
         '/Blogs/Introduction-Into-Ursina',
         '/Blogs/Making-A-Chatbot-With-Python',
-        '/Blogs/Python-Introduction'
+        '/Blogs/Python-Introduction',
+        '/Blogs/Machine-Learning-With-Python'
       ];
     
       const currentPage = window.location.pathname.toLowerCase();
@@ -119,6 +121,13 @@
         <h1>404 Page Not Found</h1>
         <p>The page you are looking for does not exist.</p>
         <p>Please check the URL or go to the <a href="https://PyBlog.ddns.net/Home">homepage</a>.</p>
+        <br><br>
+        <p>
+          Correct URL and webpage not responding?
+          <br>Contact us at:<br>
+          <a href="mailto:baileyleah542@gmail.com">Itsbailey - email</a><br>
+          <a href="mailto:RangerRhino23@outlook.com">RangerRhino - email</a>
+        </p>
     </div>
 </body>
 </html>
