created a new blog and added difficulty ratings

--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -94,6 +94,10 @@
     <!--Optional image placement-->
     <img src="Flask-stuff/Flask.png" style="zoom:0.6;" class="img-preset">
     <h1>Creating web applications with python flask.</h1><br>
+    <h3>Difficulty: Intermediate</h3>
+
+
+    <h2>Introduction</h2>
     <p>
       In this blog post we will be making a website with python and flask.
       and successfully running it a localhost.
