--- a/Blogs/Deeper-Exploration-of-Tkinter.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter.html
@@ -111,6 +111,9 @@
   </header>
   <body>
     <h1>A Deeper Exploration of Tkinter</h1>
+    <h3>Difficulty: Beginner</h3>
+
+
     <h2>Quick recap.</h2>
     <p>
         From what we saw in <a href="../Blogs/Desktop-Applications-With-Tkinter.html">this blog</a>
