--- a/Blogs/Desktop-Applications-With-Tkinter.html
+++ b/Blogs/Desktop-Applications-With-Tkinter.html
@@ -41,6 +41,10 @@
     <br><br>
     <img src="home-page-images/Desktop-Tkinter.jpg" class="img-preset">
     <h1>Desktop Apps with Tkinter!</h1>
+    <h3>Difficulty: Beginner</h3>
+
+
+    <h2>Introduction</h2>
     <p>
       Desktop applications can be an incredibly useful tool for a variety of purposes, from creating custom data visualizations to building applications that automate repetitive tasks. 
       One of the most popular ways to build desktop applications is with the Python programming language, and one of the most commonly used libraries for building desktop applications in Python is Tkinter.
