--- a/Blogs/Installing-Python.html
+++ b/Blogs/Installing-Python.html
@@ -93,6 +93,9 @@
     <br><br>
     <img src="Python-Introduction-Files\python_logo.png" class="img-preset">
     <h1>Installing Python</h1>
+    <h3>Difficulty: Beginner</h3>
+
+    <h2>Introduction</h2>
     <p>
       Python is a popular programming language that is used for a variety of tasks including 
       web development, data analysis, and artificial intelligence. If you're interested in 
