--- a/Blogs/Python-Introduction.html
+++ b/Blogs/Python-Introduction.html
@@ -30,6 +30,8 @@
     <br><br>
     <img src="Python-Introduction-Files/python_logo.png" class="img-preset">
     <h1 class="paragraph">Python: An Intorduction into the world of Python</h1>
+    <h3>Difficulty: Beginner</h3>
+
     <h2>What is Python?</h2>
     <p>
       Python is a high-level, interpreted programming language that is popular for its readability and ease of use. It was first released in 1991 and has since become one of the
