--- a/Blogs/Introduction-Into-Ursina.html
+++ b/Blogs/Introduction-Into-Ursina.html
@@ -93,6 +93,8 @@
     <br><br>
     <img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">
     <h1>Introduction into Ursina!</h1>
+    <h3>Difficulty: Beginner</h3>
+
     <p>
       If you're looking for an easy-to-use and beginner-friendly game engine, Ursina might be just what you need. Ursina is a Python-based game engine that was created with simplicity 
       and ease of use in mind. It's designed to help game developers quickly create 2D and 3D games without the need for complex coding or technical knowledge.
