--- a/Blogs/Machine-Learning-With-Python.html
+++ b/Blogs/Machine-Learning-With-Python.html
@@ -112,6 +112,7 @@
     <br><br>
     <img src="home-page-images/Machine-Learning.png" style="width: 30%;">
     <h1>Machine Learning With Python</h1>
+    <h3>Difficulty: Advanced</h3>
 
     <h2>Introduction</h2>
     <p>
