--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -115,6 +115,9 @@
   <body>
     <br><br>
     <h1 class="paragraph">Chatbots: How to make them in python</h1>
+    <h3>Difficulty: Intermediate</h3>
+
+
     <h2>What is a chatbot?</h2>
     <p>A chatbot is an artificial intelligence (AI) program designed to interact with users through conversation. It can simulate human-like conversations and provide automated responses based on predefined rules or machine learning algorithms.</p>
 
