--- a/Home.html
+++ b/Home.html
@@ -150,7 +150,7 @@
       <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
         <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
         <p><b>
-          Making a website with flask
+          Making a website With flask
         </b></p>
       </div>
     </div><br>
@@ -161,10 +161,10 @@
           Machine Learning With Python
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-       <img src="sad.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Creating-Simulations-With-Python'" style="cursor: pointer;">
+       <img src="Blogs/home-page-images/Creating-Simulations.png" class="blog-img">
        <p><b>
-        Blog doesn't exist yet
+        Creating Simulations With Python
        </b></p>
      </div>
      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
