fixed little bugs

--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -333,7 +333,9 @@ beginSim()
     
     <div style="margin-top:80px;"></div>
     <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
-    <div style="margin-top:30px;"></div>
+    <div style="margin-top:40px;"></div>
+    <a class="button" href="../Home">Back To Home</a>
+    <div style="margin-top:60px;"></div>
 
 <script>
   function copyCode(elementId) {
