--- a/Blogs/Using-Sockets-For-Networking.html
+++ b/Blogs/Using-Sockets-For-Networking.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Template | PyBlog</title>
+    <title>Using Sockets For Networking | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
     <style>
@@ -26,6 +26,7 @@
             padding: 10px;
             margin: 0;
             width: auto;
+            max-width: 60%;
             text-align: left;
             display: inline-block;
         }
@@ -93,7 +94,10 @@
     <br><br>
     <!--Optional image placement-->
     <!--<img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">-->
-    <h1>Using python and sockets to create a chatroom.</h1>
+    <h1>Using Python and Sockets to Create a Chatroom.</h1>
+    <h3>Difficulty: Intermediate</h3>
+
+    <h2>Introduction</h2>
     <br><p>
       In this blog we will be covering how to make a chatroom using python and its
       built-in module "socket".<br><br> First off you'll want to import the module
@@ -106,10 +110,11 @@
     <br><br><P>Using this import statement you have now successfully import the socket module
         and we can continue onto the next step of creating a chatroom with python.
     </P>
-    <br><br><br>
+    <div style="margin-top:200px;"></div>
     <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
-    <br><br><br><br><br><br><br><br><br>
+    <div style="margin-top:40px;"></div>
     <a class="button" href="../Home">Back To Home</a>
+    <div style="margin-top:60px;"></div>
 <script>
   function copyCode(elementId) {
     var codeBlock = document.getElementById(elementId);
