Created Python Fundamentals blog

--- a/Home.html
+++ b/Home.html
@@ -123,6 +123,12 @@
           What is Python?
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/Python-Fundamentals'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Python-Fundamentals.png" class="blog-img">
+        <p><b>
+          Python Fundamentals
+        </b></p>
+      </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter'" style="cursor: pointer;">
         <img src="Blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
         <p><b>
@@ -147,12 +153,6 @@
           Making a Chatbot With Python
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
-        <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
-        <p><b>
-          Making a website With flask
-        </b></p>
-      </div>
     </div><br>
     <div class="grid-container" id="gridContainer2" style="display: none;">
       <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python'" style="cursor: pointer;">
@@ -167,12 +167,30 @@
         Creating Simulations With Python
        </b></p>
      </div>
-     <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-       <img src="sad.png" class="blog-img">
-       <p><b>
-         Blog doesn't exist yet
-       </b></p>
-     </div>
+     <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
+      <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
+      <p><b>
+        Making a website With flask
+      </b></p>
+      </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+        <img src="sad.png" class="blog-img">
+        <p><b>
+          Blog doesn't exist yet
+        </b></p>
+      </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+        <img src="sad.png" class="blog-img">
+        <p><b>
+          Blog doesn't exist yet
+        </b></p>
+      </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+        <img src="sad.png" class="blog-img">
+        <p><b>
+          Blog doesn't exist yet
+        </b></p>
+      </div>
     </div><br>
     <button onclick="toggleElements()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&gt;</button>
 
