--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -128,40 +128,40 @@
 
   <!-- Fun Blogs -->
   <div class="grid-container" id="gridContainer1" style = "display: grid;">
-    <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction'">
-      <img src="Blogs/home-page-images/Python-Introduction.jpg">
+    <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
       <p><b>
         What is Python?
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter'">
-      <img src="Blogs/home-page-images/Desktop-Tkinter.jpg">
+    <div class="grid-item" onclick="window.location.href='Blogs/Python-Fundamentals'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Python-Fundamentals.png" class="blog-img">
+      <p><b>
+        Python Fundamentals
+      </b></p>
+    </div>
+    <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
       <p><b>
         Building Desktop Applications With Tkinter
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter'">
-      <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.png">
+    <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.png" class="blog-img">
       <p><b>
         Deeper Exploration of Tkinter
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina'">
-      <img src="Blogs/home-page-images/Introduction-Into-Ursina.png">
+    <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Introduction-Into-Ursina.png" class="blog-img">
       <p><b>
         Introduction Into Ursina Engine
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python'">
-      <img src="Blogs/home-page-images/Making-Chatbot-With-Python.png">
+    <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Making-Chatbot-With-Python.png" class="blog-img">
       <p><b>
         Making a Chatbot With Python
-      </b></p>
-    </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'">
-      <img src="Blogs/Flask-stuff/Flask.png">
-      <p><b>
-        Making a website with flask
       </b></p>
     </div>
   </div><br>
@@ -172,18 +172,36 @@
         Machine Learning With Python
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'">
-     <img src="sad.png">
+    <div class="grid-item" onclick="window.location.href='Blogs/Creating-Simulations-With-Python'" style="cursor: pointer;">
+     <img src="Blogs/home-page-images/Creating-Simulations.png" class="blog-img">
      <p><b>
-      Blog doesn't exist yet
+      Creating Simulations With Python
      </b></p>
    </div>
-   <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'">
-     <img src="sad.png">
-     <p><b>
-       Blog doesn't exist yet
-     </b></p>
-   </div>
+   <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
+    <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
+    <p><b>
+      Making a website With flask
+    </b></p>
+    </div>
+    <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+      <img src="sad.png" class="blog-img">
+      <p><b>
+        Blog doesn't exist yet
+      </b></p>
+    </div>
+    <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+      <img src="sad.png" class="blog-img">
+      <p><b>
+        Blog doesn't exist yet
+      </b></p>
+    </div>
+    <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+      <img src="sad.png" class="blog-img">
+      <p><b>
+        Blog doesn't exist yet
+      </b></p>
+    </div>
   </div><br>
   <button onclick="toggleElements()" class="button" style="padding: 10px; padding-left: 20%; padding-right: 20%; cursor: pointer;">&gt;</button>
 
