New Mobile Blog test

--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -132,7 +132,7 @@
     if (isMobileDevice()) {
       ;
     } else {
-      // window.location.replace("https://pyblog.ddns.net/Home")
+      window.location.replace("https://pyblog.ddns.net/Home")
     }
   
   </script>
