--- a/Blogs/Installing-Python-Mobile.html
+++ b/Blogs/Installing-Python-Mobile.html
@@ -136,7 +136,7 @@
     if (isMobileDevice()) {
       ;
     } else {
-      //window.location.replace("https://pyblog.ddns.net/Blogs/Installing-Python")
+      window.location.replace("https://pyblog.ddns.net/Blogs/Installing-Python")
     }
   
   </script>
