--- a/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
+++ b/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
@@ -109,7 +109,7 @@
 </head>
 <header>
   <div id="side-menu" style="height: 120px;">
-		<div class="menu-item"><a href="../Home">Home</a></div>
+		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
     <div class="menu-item"><a href="../Authors/RangerRhino23.html">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
@@ -228,7 +228,7 @@ root.mainloop()
   <br>
   <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
   <br><br><br>
-  <a class="button" href="../Home">Back To Home</a>
+  <a class="button" href="../Home-Mobile">Back To Home</a>
   <div style="margin-top:60px;"></div>
   <script>
   function copyCode(elementId) {
