--- a/Blogs/Creating-Simulations-With-Python-Mobile.html
+++ b/Blogs/Creating-Simulations-With-Python-Mobile.html
@@ -132,7 +132,7 @@
 <header>
   <div id="side-menu" style="height: 120px;">
 		<div class="menu-item"><a href="../Home">Home</a></div>
-    <div class="menu-item"><a href="../Authors/ItsBailey">Author</a></div>
+    <div class="menu-item"><a href="../Authors/RangerRhino23">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
