--- a/404.html
+++ b/404.html
@@ -77,7 +77,14 @@
         '/blogs/introduction-into-ursina',
         '/blogs/making-a-chatbot-with-python',
         '/blogs/python-introduction',
-        '/blogs/machine-learning-with-python'
+        '/blogs/machine-learning-with-python',
+        '/blogs/deeper-exploration-of-tkinter-mobile',
+        '/blogs/desktop-applications-with-tkinter-mobile',
+        '/blogs/installing-python-mobile',
+        '/blogs/introduction-into-ursina-mobile',
+        '/blogs/making-a-chatbot-with-python-mobile',
+        '/blogs/python-introduction-mobile',
+        '/blogs/machine-learning-with-python-mobile'
       ];
     
       const uppercasePaths = [
@@ -94,7 +101,14 @@
         '/Blogs/Introduction-Into-Ursina',
         '/Blogs/Making-A-Chatbot-With-Python',
         '/Blogs/Python-Introduction',
-        '/Blogs/Machine-Learning-With-Python'
+        '/Blogs/Machine-Learning-With-Python',
+        '/Blogs/Deeper-Exploration-of-Tkinter-Mobile',
+        '/Blogs/Desktop-Applications-With-Tkinter-Mobile',
+        '/Blogs/Installing-Python-Mobile',
+        '/Blogs/Introduction-Into-Ursina-Mobile',
+        '/Blogs/Making-A-Chatbot-With-Python-Mobile',
+        '/Blogs/Python-Introduction-Mobile',
+        '/Blogs/Machine-Learning-With-Python-Mobile'
       ];
     
       const currentPage = window.location.pathname.toLowerCase();
