--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -79,7 +79,7 @@
 		<div class="menu-item"><a id="about-pyblog-button">About Pyblog</a></div>
 		<div class="menu-item"><a id="fun-blogs-button">Fun Blogs</a></div>
 		<div class="menu-item"><a id="helpful-blogs-button">Helpful Blogs</a></div>
-    <div class="menu-item"><a href="Authors/index">Authors</a></div>
+    <div class="menu-item"><a href="Authors/">Authors</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
@@ -155,37 +155,37 @@
 
   <!-- Fun Blogs -->
   <div class="grid-container" id="gridContainer1" style = "display: grid;">
-    <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
       <p><b>
         What is Python?
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Python-Fundamentals'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Python-Fundamentals-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Python-Fundamentals.png" class="blog-img">
       <p><b>
         Python Fundamentals
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
       <p><b>
         Building Desktop Applications With Tkinter
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.png" class="blog-img">
       <p><b>
         Deeper Exploration of Tkinter
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Introduction-Into-Ursina.png" class="blog-img">
       <p><b>
         Introduction Into Ursina Engine
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Making-Chatbot-With-Python.png" class="blog-img">
       <p><b>
         Making a Chatbot With Python
@@ -193,19 +193,19 @@
     </div>
   </div><br>
   <div class="grid-container" id="gridContainer2" style="display: none;">
-    <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Machine-Learning.png" class="blog-img">
       <p><b>
         Machine Learning With Python
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/Creating-Simulations-With-Python'" style="cursor: pointer;">
+    <div class="grid-item" onclick="window.location.href='Blogs/Creating-Simulations-With-Python-Mobile'" style="cursor: pointer;">
      <img src="Blogs/home-page-images/Creating-Simulations.png" class="blog-img">
      <p><b>
       Creating Simulations With Python
      </b></p>
    </div>
-   <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
+   <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask-Mobile'" style="cursor: pointer;">
     <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
     <p><b>
       Making a website With flask
